--- a/estore-ui/src/app/courses/courses.component.css
+++ b/estore-ui/src/app/courses/courses.component.css
@@ -6,7 +6,10 @@
 }
 
 .course-container > section {
-  /* background-color: #f1f1f1; */
+  background: rgba(248, 247, 247, 0.87);
+  padding: 1em;
+  margin: 0.5em;
+  border-radius: 9px;
   align-items: center;
   display: flex;
   flex: 1 1 0;
@@ -18,6 +21,7 @@
 .course-container > section > p {
   flex-grow: 1;
   flex-wrap: wrap;
+  overflow: hidden;
 }
 
 @media (max-width: 1600px) {
@@ -69,12 +73,6 @@ h2 {
   margin: 5px 0 5px 0;
 }
 
-.course-container > section {
-  background: rgba(248, 247, 247, 0.87);
-  padding: 1em;
-  margin: 0.5em;
-  border-radius: 9px;
-}
 
 button {
   background: #009999 url("/assets/img/check-button.png");
