--- a/estore-ui/src/app/top-bar/top-bar.component.html
+++ b/estore-ui/src/app/top-bar/top-bar.component.html
@@ -3,7 +3,7 @@
 </a>
 
 <div class="form-group has-search">
-  <span class="fa fa-search form-control-feedback"></span>
+  <i class="fa fa-search form-control-feedback"></i>
   <input
     type="search"
     class="form-control"
